packages/cjs-to-esm/test/snapshots/package-corpus/core-js/full/error/is-error.js
import parent from "../../actual/error/is-error";
const _cjs_default = parent;
export default _cjs_default;
